k8s/apps/authentik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-server
  namespace: authentik
spec:
  type: ClusterIP
  selector:
    app: authentik-server
  ports:
  - name: http
    port: 9000
    targetPort: 9000
