k8s/apps/authentik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-server
  namespace: authentik
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: authentik-lan-only@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - auth.homelab.krymancer.dev
    secretName: homelab-wildcard-tls
  rules:
  - host: auth.homelab.krymancer.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentik-server
            port:
              number: 9000
